--- a/epibook/src/App.css
+++ b/epibook/src/App.css
@@ -32,7 +32,20 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  height: 100vh;
+}
+
+#id {
+  height: 100vh;
+}
+
+.card {
+  max-width: 280px
 }
