--- a/epibook/src/App.css
+++ b/epibook/src/App.css
@@ -47,7 +47,7 @@ body {
 }
 
 .card {
-  max-width: 200px;
+  max-width: 100%;
 
 }
 
@@ -56,6 +56,7 @@ body {
   aspect-ratio: 2/3;
 }
 
-.border {
-  border: 2px solid red;
+.redBorder {
+  border: 2px solid red !important;
+  
 }
