--- a/epibook/src/App.css
+++ b/epibook/src/App.css
@@ -60,3 +60,16 @@ body {
   border: 2px solid red !important;
   
 }
+.backwhite{
+background-color: white;
+}
+::-webkit-scrollbar {
+  width: .45rem;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(27, 27, 27, .4);
+  border-radius: 3px;
+}
+::-webkit-scrollbar-track{
+  background: transparent;
+}
