--- a/epibook/src/App.css
+++ b/epibook/src/App.css
@@ -52,7 +52,7 @@ body {
 }
 
 .card img {
-
+width: 100%;
   aspect-ratio: 2/3;
 }
 
@@ -63,13 +63,7 @@ body {
 .backwhite{
 background-color: white;
 }
+
 ::-webkit-scrollbar {
-  width: .45rem;
-}
-::-webkit-scrollbar-thumb {
-  background-color: rgba(27, 27, 27, .4);
-  border-radius: 3px;
-}
-::-webkit-scrollbar-track{
-  background: transparent;
+  display: none;
 }
